fix(bets): resolve SonarCloud findings from the feature->develop gate
Math.clamp instead of nested Math.min/Math.max (S6885); unnamed
pattern for the unused catch variable on the concurrent-insert race
path (S7467).

Refs: SV-70
Feature: feat-002