@@ -36,7 +36,8 @@ public class MarketsController {
 	public PagedResponse<CatalogResponse> list(
 			@RequestParam(defaultValue = "0") int page,
 			@RequestParam(defaultValue = "20") int size) {
-		return PagedResponse.from(marketCatalog.list(Math.max(page, 0), Math.min(Math.max(size, 1), MAX_PAGE_SIZE)),
+		return PagedResponse.from(
+				marketCatalog.list(Math.clamp(page, 0, Integer.MAX_VALUE), Math.clamp(size, 1, MAX_PAGE_SIZE)),
 				market -> new CatalogResponse(market.id(), market.name()));
 	}
 }
